--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fastclick": "^1.0.6",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-scroller": "^2.2.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
